loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: not found: value nb
do{nb = 0
   ^Poucet1:5: error: not found: value nb
      nb = nb +1
      ^Poucet1:8: error: not found: value nb
  if (nb<=2){
      ^Poucet1:10: error: not found: value nb
  }else if(nb>=3){
           ^